deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-app
  template:
    metadata:
      labels:
        app: currency-app
    spec:
      containers:
      - name: currency-app
        image: kishorek003/currency-app:latest
        ports:
        - containerPort: 80
