service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: default
spec:
  selector:
    app: currency-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000    
  type: ClusterIP
